# LinearOperator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  output_01.data  output_02.data
apps/: CMakeLists.txt  blaze.cc  eigen.cc  full_matrix_01.cc  full_matrix_02.cc  full_matrix_03.cc  full_matrix_04.cc  matrix.cc  po_version_full_matrix_01.cc  run.sh  sparse_matrix_01.cc  sparse_matrix_02.cc  sparse_matrix_03.cc  sparse_matrix_04.cc  sparse_matrix_inefficient.cc  sparse_matrix_residual.cc  step-32.cc  step-32.prm  step-40.cc  step-6.cc  stokes.cc  test_00.cc  test_01.cc  triple_add_01.cc  triple_add_02.cc
bench_scripts/: matrix.sh  plot.py  plot_2.py  run.sh  script.sh  script_2.sh
include/: blaze_plugin.h  eigen_plugin.h  linear_operator.h  navier_stokes.h  test.h  utilities.h  wrappers.h
include/benchmark/: benchmark.h  utilities.h
qsub/: script.sh  template
script/: check_indentation.sh  configure.sh  indent  matrix.sh  qsub-script.sh  qsub-template
source/: navier_stokes.cc
